[FKS-1583] Tests for users